--- a/module/usuario/view/usuario/usuario/login.phtml
+++ b/module/usuario/view/usuario/usuario/login.phtml
@@ -19,5 +19,40 @@
                 Esqueceu sua Senha? <a href="<?= $this->url('recuperarSenha'); ?>">Recupere aqui</a>
             </p>        
             
+            <hr>
+            <p>
+                <div class="g-signin2" data-onsuccess="onSignIn"></div>
+
+            </p>            
         </form>   
     </div>
+
+
+    <script type="text/javascript">
+      function onSignIn(googleUser) {
+        var profile = googleUser.getBasicProfile();
+        /*console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
+        console.log('Name: ' + profile.getName());
+        console.log('Image URL: ' + profile.getImageUrl());
+        var email = profile.getEmail();*/
+        if(profile.getEmail() == ''){
+          //Login não realizado!
+          alert('Permissão negada ao acessar o google!');
+        }else{
+          var dados = {
+            userID:profile.getId(),
+            userName:profile.getName(),
+            userEmail:profile.getEmail()
+          };
+          $.post('<?= $this->url("loginGoogle"); ?>', dados, function(retorna){
+            console.log(retorna);
+            if(retorna == "erro"){
+              alert('Usuário não encontrado com esse e-mail!');
+            }else{
+              window.location.href = retorna;
+            }
+            
+          });
+        }
+      }
+    </script>
