--- a/module/application/view/partials/form.phtml
+++ b/module/application/view/partials/form.phtml
@@ -1,5 +1,4 @@
-<form class="formulario campos-info" role="form" method="POST" action="#">
-<?= $this->form()->openTag($form); ?>
+<form class="formulario campos-info" role="form" method="POST" enctype='multipart/form-data' action="#">
 <?php foreach ($form->getElements() as $element): ?>
 		<?php 
 			$attributes = $element->getAttributes();
@@ -8,7 +7,7 @@
 				continue;
 			}
     ?>
-    <p class="b3">
+    <p class="b3" id="p-form-<?=$element->getName()?>">
       <label for="<?=$element->getName()?>"><?=$element->getLabel()?></label>
       <?= $this->formElement($element); ?>
       <?= $this->formElementErrors($element, array('class' => 'alert alert-danger')); ?>
