--- a/module/usuario/view/layout/layoutlogin.phtml
+++ b/module/usuario/view/layout/layoutlogin.phtml
@@ -3,6 +3,7 @@
 <html lang="en">
   <head>
       <meta charset="utf-8">
+      <meta name="google-signin-client_id" content="119263952091-gdpfe1a4arv7dj1g2f4uia1pf517tk44.apps.googleusercontent.com">
       <?php echo $this->headTitle('Cognitive - '. $this->translate('login'))->setSeparator(' - ')->setAutoEscape(false) ?>
 
       <?php echo $this->headMeta()
@@ -27,6 +28,8 @@
           ->prependFile($this->basePath() . '/js/jquery.min.js'); ?>
           
       <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+      <script src="https://apis.google.com/js/platform.js"></script>
+
   </head>
   <body>
     <div id="conteiner" class="login">
