--- a/module/application/view/layout/layoutEdicao.phtml
+++ b/module/application/view/layout/layoutEdicao.phtml
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="google-signin-client_id" content="119263952091-gdpfe1a4arv7dj1g2f4uia1pf517tk44.apps.googleusercontent.com">
      <?php echo $this->headTitle($this->loja['nome_restaurante'])->setSeparator(' - ')->setAutoEscape(false) ?>
 
         <?php echo $this->headMeta()
@@ -26,7 +27,7 @@
             ->prependFile($this->basePath() . '/js/jquery.autocomplete.js')
             ->prependFile($this->basePath() . '/js/PowerBI/dist/powerbi.js')
             ->prependFile($this->basePath() . '/js/jquery.min.js'); ?>
-
+          <script src="https://apis.google.com/js/platform.js"></script>
   </head>
 <body>
 <div id="conteiner" class="escuro" style="width: 100% !important;">
@@ -84,7 +85,7 @@
                   </ol>
               </li>
               <li class="dd-item dd3-item" data-id="conf-6">
-                  <div class="dd-handle dd3-handle"><img src="<?= $this->basePath('img/ico-home.png'); ?>" alt=""></div><div class="dd3-content" onclick="location.href='<?= $this->url('logout'); ?>'">Logout</div>
+                  <div class="dd-handle dd3-handle"><img src="<?= $this->basePath('img/ico-home.png'); ?>" alt=""></div><div class="dd3-content" onclick="signOut();">Logout</div>
               </li>
             </ol>
             <a onclick="salvarOrdemMenu();" class="botao" name="Salvar"><i class="fas fa-save"></i> Salvar</a>
@@ -142,7 +143,24 @@
           // e is the element that was moved
         }
       });
+
+      //logout google
+      gapi.load('auth2', function() {
+        gapi.auth2.init();
+      });
     });
+
+    function signOut() {
+      <?php if(isset($usuario['google']) && $usuario['google'] == true): ?>
+        gapi.auth2.init();
+        var auth2 = gapi.auth2.getAuthInstance();
+        auth2.signOut().then(function () {
+          location.href = "<?= $this->url('logout'); ?>";
+        });
+      <?php else: ?>
+        location.href = "<?= $this->url('logout'); ?>";
+      <?php endif; ?>
+    }
 
     function salvarOrdemMenu(){
         var data = {ordem: window.JSON.stringify($('.dd').nestable('serialize'))};
